# Palladia

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run_process.py
benchmarks/: manifest.json
benchmarks/GT4HistOCR/corpus/EarlyModernLatin/1471-Orthographia-Tortellius/: 00021.bin.json  00022.bin.json  00045.bin.json  00057.bin.json  00065.bin.json  00072.bin.json  00073.bin.json  00092.bin.json  00094.bin.json  00095.bin.json  00133.bin.json  00175.bin.json  00181.bin.json  00185.bin.json  00186.bin.json  00199.bin.json  00201.bin.json  (+27 more)
config/: input_config.yaml  loader.py  model_config.yaml  schemas.py
config/yaml/: input_config.yaml  model_config.yaml
dashboard/: index.html
demo/GT4HistOCR/corpus/EarlyModernLatin/: 1471-Orthographia-Tortellius.json
docs/: index.html  model_links.json  script.js  styles.css
docs/css/: dark-mode.css  styles.css
docs/data/json/: manifest.json  model_links.json
docs/js/: benchmark-dashboard.js  diff-viewer.js  file-loader.js  main.js  modes.js  url-router.js
docs/json/: manifest.json
evaluation/: graph.py  metrics.py
models/: agent.py  model_manager.py  model_utils.py  models.py
results/GT4HistOCR/corpus/EarlyModernLatin/: 1476-SpeculumNaturale-Beauvais.json  1483-Decades-Biondo.json
results/GT4HistOCR/corpus/RefCorpus-ENHG-Incunabula/: 1478-Biblia.json
scripts/: copy_images_for_results.py  debug_models.py  delete_model.py  download_dataset.py  dummy_run.py  generate_model_links.py  run_process.py  update_manifest.py  update_model_links.py  update_model_names.py
src/benchmark/: execution.py  metrics.py  prompts.py  results_manager.py
src/config/: images.yaml  models.yaml  schemas.py
src/utils/: converters.py  download_dataset.py  preprocessing.py
tests/: test_config_validation.py
utils/: custom_trim.py  delete_model.py  download_dataset.py  encoding.py  generate_model_links.py  migrate_images.py  save.py  update_manifest.py  update_model_names.py
utils/webserver/: dashboard_ws.py
(+512 files in other folders)
