[project]
name = "OCRacle"
version = "0.1.0"
description = "A tool for evaluating and comparing the performance of various SOTA multimodal and vision LLM models on historical image documents, based on the GT4HistOCR dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.1",
    "anthropic>=0.57.1",
    "bert-score>=0.3.13",
    "cohere>=5.16.1",
    "diff-match-patch>=20241021",
    "filetype>=1.2.0",
    "google-genai>=1.25.0",
    "groq>=0.29.0",
    "huggingface-hub>=0.33.4",
    "jiwer>=4.0.0",
    "matplotlib>=3.10.3",
    "mistralai>=1.9.1",
    "openai>=1.93.3",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
]
