[project]
name = "OCRacle"
version = "0.1.0"
description = "Introducing a benchmark tool for Vision LLMs on historical image documents, based on the GT4HistOCR dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.1",
    "anthropic>=0.57.1",
    "bert-score>=0.3.13",
    "customtkinter>=5.2.2",
    "diff-match-patch>=20241021",
    "filetype>=1.2.0",
    "google-genai>=1.25.0",
    "groq>=0.29.0",
    "huggingface-hub>=0.33.4",
    "jiwer>=4.0.0",
    "matplotlib>=3.10.3",
    "mistralai>=1.9.1",
    "openai>=1.93.3",
    "pandas>=2.3.1",
    "pillow>=11.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "rich>=13.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
]
